addiing functionality to my web-page

--- a/book.html
+++ b/book.html
@@ -13,6 +13,10 @@
         
 </head>
 <body>
+    <nav>
+        <a class="active" href="index.html">Entry-Form</a><>
+  <a href="book.html">Display-form</a>
+    </nav>
 
     <div class="container">
       <h1>Address book</h1>
